--- a/src/Ray.AutoTask/appsettings.json
+++ b/src/Ray.AutoTask/appsettings.json
@@ -3,12 +3,13 @@
     {
       "Name": "",
       "Api": "",
-      "placeholder": "#msg#", //占位符
-      "bodyJsonTemplate": "", //json模板，会当作post的body，占位符会被日志内容替换（日志文本为json字符串，已经带有引号，所以模板中占位符不用使用引号包裹）
-      "Headers": [
-        "",
-        ""
-      ]
+      "Method": "POST",
+      "ContentType": "FormUrlEncodedContent",
+      "Placeholder": "#msg#", //占位符
+      "BodyJsonTemplate": "", //json模板，会当作post的body，占位符会被日志内容替换（日志文本为json字符串，已经带有引号，所以模板中占位符不用使用引号包裹）
+      "Headers": {
+        "": ""
+      }
     }
   ],
 
