--- a/src/Ray.AutoTask/appsettings.json
+++ b/src/Ray.AutoTask/appsettings.json
@@ -1,23 +1,54 @@
 {
-  "Task": [
-    {
-      "Name": "",
-      "Api": "",
-      "Method": "POST",
-      "ContentType": "FormUrlEncodedContent",
-      "Placeholder": "#msg#", //占位符
-      "BodyJsonTemplate": "", //json模板，会当作post的body，占位符会被日志内容替换（日志文本为json字符串，已经带有引号，所以模板中占位符不用使用引号包裹）
-      "Headers": {
-        "": ""
+  "Tasks": {
+    "DefaultHeaders": {
+
+    },
+    "DefaultCookies": {
+
+    },
+    "List": [
+      {
+        "Name": "测试",
+        "Open": true,
+        "MapToClient": "",
+        "Api": "http://pv.sohu.com/cityjson?ie=utf-8",
+        "Headers": {
+          "Add": {
+            "Accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9",
+            "Accept-Encoding": "gzip, deflate"
+          },
+          "Remove": {
+            "RemoveAll": true
+          }
+        },
+        "Cookies": {
+          "Add": {},
+          "Remove": {
+            "RemoveAll": true
+          }
+        },
+        "Method": "GET",
+        "Content": {
+          "Type": "StringContent", //[StringContent,FormUrlEncodedContent]
+          "StringContent": {
+            "Content": "",
+            "Encoding": "",
+            "MediaType": ""
+          },
+          "FormUrlEncodedContent": {
+            "Dic": {}
+          }
+        }
       }
-    }
-  ],
+    ]
+  },
 
   //安全相关配置
   "Security": {
-    "IsSkipDailyTask": false, //是否跳过执行任务
-    "IntervalSecondsBetweenRequestApi": 3, //两次调用api之间间隔的秒数[0,+]
-    "IntervalMethodTypes": "GET,POST", //间隔秒数所针对的HttpMethod，多个用英文逗号隔开，当前有GET和POST两种
+    "IsSkipDailyTask": false, //是否跳过执行任务，用于特殊情况下，通过配置灵活的开启和关闭任务
+    "IntervalSecondsBetweenRequestApi": 3, //两次调用api之间间隔的秒数[0,+]。因为有人担心在几秒内连续调用api会被b站安全机制发现，所以为不放心的朋友添加了间隔秒数配置，两次连续调用Api之间会大于该秒数
+    "IntervalMethodTypes": "GET,POST", //间隔秒数所针对的HttpMethod，多个用英文逗号隔开，当前有GET和POST两种，可配置如“GET,POST”。服务器一般对GET请求不是很敏感，建议只针对POST请求做间隔就可以了
+    "UserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Safari/537.36 Edg/87.0.664.41", //请求B站接口时头部传递的User-Agent
     "WebProxy": "" //代理
   },
 
