--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="1.7.23" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="5.0.7" />
   </ItemGroup>
 
   <ItemGroup>
