--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="CronExpressionDescriptor" Version="2.16.0" />
+    <PackageReference Include="Cronos" Version="0.7.0" />
     <PackageReference Include="Hangfire.Core" Version="1.7.23" />
     <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="5.0.7" />
   </ItemGroup>
