--- a/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
+++ b/samples/BiliBiliTool/src/Hangfire.Dashboard.Extensions/Hangfire.Dashboard.Extensions.csproj
@@ -11,14 +11,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Content\css\cron-expression-input.min.css" />
+    <None Remove="Content\js\cron-expression-input.min.js" />
     <None Remove="Content\js\hangfire-ext.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Content\css\cron-expression-input.min.css" />
+    <EmbeddedResource Include="Content\js\cron-expression-input.min.js" />
     <EmbeddedResource Include="Content\js\hangfire-ext.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Content\css\cron-expression-input.min.css" />
     <Resource Include="Content\resx\RayStrings.zh.resx" />
   </ItemGroup>
 
