--- a/samples/BiliBiliTool/src/Ray.BiliBiliTool.Api/appsettings.json
+++ b/samples/BiliBiliTool/src/Ray.BiliBiliTool.Api/appsettings.json
@@ -157,7 +157,10 @@
         }
       },
       {
-        "Name": "Hangfire"
+        "Name": "Hangfire",
+        "Args": {
+          "restrictedToMinimumLevel": "Information"
+        }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithHangfireContext" ]
