--- a/samples/BiliBiliTool/test/LogTest/LogTest.csproj
+++ b/samples/BiliBiliTool/test/LogTest/LogTest.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Ray.BiliBiliTool.Api\Ray.BiliBiliTool.Api.csproj" />
     <ProjectReference Include="..\..\src\Ray.BiliBiliTool.Console\Ray.BiliBiliTool.Console.csproj" />
   </ItemGroup>
 
